# Palfrey

./: CMakeLists.txt  Data_Link.md  README.md
benchmark/: 0_test.c  151_test.cpp  31_test.c  41_test.cpp  62_test.cpp  6_test.c  7_test.c  97_test.cpp  clang-ast  getastcmd.py
doc/: Framework.md  cmd.md
include/CFG/: InterProcedureCFG.h  README.md
include/P2A/: Node.h  PTAType.h  PTAVar.h  PointToAnalysis.h  README.md
include/checkers/borrowed_reference_checker/: borrowed_reference_checker.h
include/checkers/checker5 copy/: checker5.h
include/checkers/immediate_uaf_checker/: immediate_uaf_checker.h
include/framework/: ASTElement.h  ASTManager.h  CallGraph.h  Common.h  Logger.h
lib/: CMakeLists.txt
lib/P2A/: CMakeLists.txt  Node.cpp  PTAType.cpp  PTAVar.cpp  PointToAnalysis.cpp  PointToAnalysisAlg.cpp
lib/checkers/: CMakeLists.txt
lib/checkers/borrowed_reference_checker/: CMakeLists.txt  borrowed_reference_checker.cpp
lib/checkers/checker5 copy/: checker5.cpp
lib/checkers/immediate_uaf_checker/: CMakeLists.txt  immediate_uaf_checker.cpp
lib/checkers/loop_doublefree_checker/: CMakeLists.txt  loop_doublefree_checker.cpp
lib/checkers/memory_alloc_checker/: CMakeLists.txt  memory_alloc_checker.cpp
lib/checkers/realloc_checker/: CMakeLists.txt  realloc_checker.cpp
lib/checkers/stack_uaf_checker/: CMakeLists.txt  stack_uaf_checker.cpp
lib/framework/: ASTManager.cpp  CallGraph.cpp  Common.cpp  Logger.cpp
tests/: ReturnStackAddrChecker copy.cpp  config.txt
tests/RefCountChecker4/test1/: test.c  (+4 more)
tools/TemplateChecker/: CMakeLists.txt  main.cpp
(+17 files in other folders)
